1. 修改add_hyper_in_file中的True, False字符串. 2. 增加支持大于小于过滤条件。但是为非常alpha的版本，谨慎使用. 支持如下的规则:(1)支持使用list表达或的关系。比如{"hyper-lr":[0.3, 0.1]}表示等于0.3或者0.1都会显示在前端。(2) 支持通过大于小于表示范围.{"hyper-lr":"<0.3", "hyper-dropout":">0.5"}表示lr小于0.3的数据才保留;或者dropout大于0.5的才保留。(3) 使用大于小于的场景，支持通过&&表达并且如{"hyper-lr":"0.1<&&<0.3"}，表示lr需要大于0.1但小于0.3. 大于小于符号可以在条件的最右边或者最左边。即"<0.5"或"0.5>"是等价的。可以将list与and联合起来表达多个范围。比如需要筛选20190524与20190526这两天实验记录，可以写{"id":["log_20190524<&&<log_20190525", "log_20190526<&&<log_20190527"]}。(4)不同column之间默认是and的关系比如{"hyper-lr": 0.1, "hyper-dropout":0.3}表示lr和dropout同时为0.1和0.3的log; 如果需要使得不同column之间为或的关系，可以通过在filter_condition中加入一个特殊的字段and_filters, 以下的条件表示是不同filter为或的关系{"and_filters":0,"hyper-lr": 0.1, "hyper-dropout":0.3}, 请通过0或1表示and_filters，且不要加引号

--- a/fitlog/fastserver/templates/table.html
+++ b/fitlog/fastserver/templates/table.html
@@ -487,9 +487,9 @@
    $confirm_stats.click(function () {
        // 考虑把结果直接加入一行到结果中
       var row = {};
-      var id = 'stats_' + generate_uuid();
+      var id = 'stats_avg_' + generate_uuid();
       row['id'] = id;
-      var metric_names = getJsonKeys(window.row_stats['stats']);
+      var metric_names = getJsonKeys(window.row_stats['stats']); // metric_names就是metric的名称; 每个metric对应着自己的值
       for(var index=0;index<metric_names.length;index++){
           var value = window.row_stats['stats'][metric_names[index]];
           if(!('avg' in value)){
@@ -499,7 +499,7 @@
       }
       // add a memo to specify components
       row['memo'] = 'Combined from ' + window.row_stats['ids'].join(', ');
-        add_a_row(row);
+      add_a_row(row);
 
       $('#stats_box').modal('hide');
    });
@@ -521,10 +521,10 @@
    $("#row_box").on('hide.bs.modal', function (e) {
        $("#add_row_dialogue").empty();
    });
-   $("#config_box").on('hide.bs.modal', function () {
+   $("#config_box").on('hide.bs.modal', function (e) {
        $("#change_config_dialogue").empty();
    });
-   $('#stats_box').on('hide.bs.modal', function () {
+   $('#stats_box').on('hide.bs.modal', function (e) {
        $("#stats_dialogue").empty();
    });
 
@@ -680,52 +680,51 @@
         });
     }
 
-$table.on('refresh.bs.table', function () {
-      $.ajax({
-            url: '/table/refresh',
-            type: 'POST',
-            dataType: 'json',
-            contentType: 'application/json;charset=UTF-8',
-            data: JSON.stringify({
-                 uuid: window.server_uuid
-            }),
-            success: function(value){
-                var status = value['status'];
-                var msg = value['msg'];
-                if(status==='success'){
-                    if(value['new_logs'].length===0 && value['updated_logs'].length===0){
-                        success_prompt(msg, 2000);
-                    }else {
-                        new_logs = value['new_logs'];
-                        updated_logs = value['updated_logs'];
-                        if(new_logs.length>0){
-                            $('#tb_departments').bootstrapTable('prepend', new_logs);
-                            for(var index=0;index<new_logs.length;index++){
-                                window.table_data[new_logs[index]['id']] = new_logs[index];
+    $table.on('refresh.bs.table', function () {
+          $.ajax({
+                url: '/table/refresh',
+                type: 'POST',
+                dataType: 'json',
+                contentType: 'application/json;charset=UTF-8',
+                data: JSON.stringify({
+                     uuid: window.server_uuid
+                }),
+                success: function(value){
+                    var status = value['status'];
+                    var msg = value['msg'];
+                    if(status==='success'){
+                        if(value['new_logs'].length===0 && value['updated_logs'].length===0){
+                            success_prompt(msg, 2000);
+                        }else {
+                            new_logs = value['new_logs'];
+                            updated_logs = value['updated_logs'];
+                            if(new_logs.length>0){
+                                $('#tb_departments').bootstrapTable('prepend', new_logs);
+                                for(var index=0;index<new_logs.length;index++){
+                                    window.table_data[new_logs[index]['id']] = new_logs[index];
+                                }
                             }
-                        }
-                        if(updated_logs.length>0){
-                            for(var index=0;index<updated_logs.length;index++){
-                                $('#tb_departments').bootstrapTable('updateByUniqueId', {
-                                    id: updated_logs[index]['id'],
-                                    row: updated_logs[index]
-                                });
-                                window.table_data[updated_logs[index]['id']] = updated_logs[index];
+                            if(updated_logs.length>0){
+                                for(var index=0;index<updated_logs.length;index++){
+                                    $('#tb_departments').bootstrapTable('updateByUniqueId', {
+                                        id: updated_logs[index]['id'],
+                                        row: updated_logs[index]
+                                    });
+                                    window.table_data[updated_logs[index]['id']] = updated_logs[index];
+                                }
                             }
+                            success_prompt(msg, 2000);
                         }
-                        success_prompt(msg, 2000);
                     }
+                    else{
+                        bootbox.alert("Update failed! " + msg);
+                    }
+                },
+                error: function(error){
+                    bootbox.alert('Error encountered. Check your connection to server.');
                 }
-                else{
-                    bootbox.alert("Update failed! " + msg);
-                }
-            },
-            error: function(error){
-                bootbox.alert('Error encountered. Check your connection to server.');
-            }
-    })
-});
-
+        })
+    });
 </script>
 
 </html>
