1.修复log记录的bug; 2.修复前端chart截断的bug;

--- a/fitlog/fastserver/templates/chart.html
+++ b/fitlog/fastserver/templates/chart.html
@@ -137,9 +137,9 @@
         height: document.body.clientHeight*0.40,
         padding: [20, 210, 30, 50],
       });
-      if(data.length>max_steps){
-          data = data.slice(-max_steps);
-      }
+      // if(data.length>max_steps){
+      //     data = data.slice(-max_steps);
+      // }
       chart.source(data, {
         step: {
           range: [0, 1]
