修改自定义搜索的逻辑，方便使用&&运算

--- a/fitlog/fastserver/templates/folder.html
+++ b/fitlog/fastserver/templates/folder.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Log Folder</title>
     <link rel="shortcut icon" href="/table.ico" >
+    <script src="/static/js/jquery.min.js"></script>
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
     <script src="/static/js/bootstrap.js"></script>
     <style type="text/css">
